<resources>
    <string name="app_name">PotHole</string>
    <string name="pothole_title_description">Description</string>
    <string name="pothole_title_description_hint">Enter in a description.</string>
    <string name="pothole_title_id">Post ID:&#x20;</string>
    <string name="pothole_title_latitude">Latitude:&#x20;</string>
    <string name="pothole_title_longitude">Longitude:&#x20;</string>
    <string name="pothole_title_date">Date:&#032;</string>
    <string name="pothole_submit_new">Submit</string>
    <string name="pothole_new_report">Submit New Pothole</string>
</resources>
